# twpatcher

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yaml
src/: main.rs  utils.rs
src/app/: mod.rs
src/games/: attila.rs  empire.rs  mod.rs  napoleon.rs  pharaoh.rs  rome_2.rs  shogun_2.rs  three_kingdoms.rs  troy.rs  warhammer.rs  warhammer_2.rs  warhammer_3.rs
src/updater/: mod.rs
