[package]
name = "twpatcher"
build = "build.rs"
version = "0.9.4"
rust-version = "1.67"
edition = "2021"
description = "A load order patcher for Total War games since Empire: Total War."
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]

[dependencies]
common_utils = { path = "../common_utils", version = "^0.1" }

# Internal dependencies.
rpfm_lib = { git = "https://github.com/Frodo45127/rpfm.git", branch = "develop", features = ["integration_log", "integration_git", "integration_sqlite"] }
rpfm_extensions = { git = "https://github.com/Frodo45127/rpfm.git", branch = "develop" }

# Error managing.
anyhow = "^1.0"

# Basic get/set support.
getset = "^0.1"

# Multithread iterator support.
rayon = "^1.7"

# CLI parsing, formatting and color support.
clap = { version = "^4", features = ["derive", "wrap_help"] }

# Serialize support.
serde = "^1.0"
csv = "^1.1"

# Config dependencies.
directories = "^6.0"
lazy_static = "^1.4"

# Support for open files in a native way.
open = "^5"

# Better iterator support.
itertools = "^0.14"

# SQLite support
rusqlite = { version = "^0.33", features = ["blob", "bundled"] }
r2d2_sqlite = "^0.26"
r2d2 = "^0.8"
